Добавлен первый отзыв клиента

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -593,8 +593,24 @@
                     <div class="owl-carousel testimonials-carousel wow">
                         <div class="testimonial-item">
                             <div class="row">
+                                <div class="col-md-12 col-lg-4">
+                                    <img src="{% static 'main/img/photo_2022-12-05_12-14-50.jpg' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
+                                </div>
+                                <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
+
+                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">ООО "Константа"</div>
+                                    <div class="phone_wb" style="margin-left: 6px; text-align: left">
+                                        Я, Константин Асаенок, руководитель и главный врач авторской стоматологии "ДенталСтори". С первых дней работы моей клиники я начал сотрудничество с фирмой Бизнес Ассистент.
+                                        Мне важно было освободить себя от бизнес процессов и заниматься любимым делом. Именно это я и получил от коллектива BSA. На протяжении 5 лет все финансовые и налоговые вопросы находятся в их надежных руках,
+                                        ещё очень помогают в сборе документов для различных целей. В любое время я могу обратиться с задачей и получить компетентное решение.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="row">
                                 <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 2.5%;" alt="">
+                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
@@ -609,7 +625,7 @@
                         <div class="testimonial-item">
                             <div class="row">
                                 <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 2.5%;" alt="">
+                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
@@ -624,7 +640,7 @@
                         <div class="testimonial-item">
                             <div class="row">
                                 <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 2.5%;" alt="">
+                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
@@ -639,22 +655,7 @@
                         <div class="testimonial-item">
                             <div class="row">
                                 <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 2.5%;" alt="">
-                                </div>
-                                <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
-
-                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">Юрист-Консалт</div>
-                                    <div class="phone_wb" style="margin-left: 6px; text-align: left">
-                                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="row">
-                                <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 2.5%;" alt="">
+                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
