Добавлен второй отзыв клиента

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -259,7 +259,7 @@
                             <br><br><br><br>
                         </div>
                         <div class="container d-flex align-items-center justify-content-center">
-                            <dev class="phone_wb" style="padding-bottom: 5%;padding-left: 5%; padding-right: 5%;">Мы современая компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет, мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе. Обслуживаясь в нашей компании, вы получаете не просто услугу, а целую команду специалистов, которые сделают все для того, чтобы Вы получили максимальную пользу и комфорт.</dev></div>
+                            <dev class="phone_wb" style="padding-bottom: 5%;padding-left: 5%; padding-right: 5%;">Мы современная компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет, мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе. Обслуживаясь в нашей компании, вы получаете не просто услугу, а целую команду специалистов, которые сделают все для того, чтобы Вы получили максимальную пользу и комфорт.</dev></div>
                         <br><br><br>
                     </div>
                     </dev>
@@ -598,11 +598,12 @@
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
-                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">ООО "Константа"</div>
+                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">Дентал Стори</div>
                                     <div class="phone_wb" style="margin-left: 6px; text-align: left">
                                         Я, Константин Асаенок, руководитель и главный врач авторской стоматологии "ДенталСтори". С первых дней работы моей клиники я начал сотрудничество с фирмой Бизнес Ассистент.
                                         Мне важно было освободить себя от бизнес процессов и заниматься любимым делом. Именно это я и получил от коллектива BSA. На протяжении 5 лет все финансовые и налоговые вопросы находятся в их надежных руках,
-                                        ещё очень помогают в сборе документов для различных целей. В любое время я могу обратиться с задачей и получить компетентное решение.
+                                        ещё очень помогают в сборе документов для различных целей. В любое время я могу обратиться с задачей и получить компетентное решение.<br>
+                                        Сайт: <a href="https://dstoryclinic.ru/">https://dstoryclinic.ru/</a>
                                     </div>
                                 </div>
                             </div>
@@ -610,14 +611,18 @@
                         <div class="testimonial-item">
                             <div class="row">
                                 <div class="col-md-12 col-lg-4" style="margin-top: 14px;">
-                                    <img src="{% static 'main/img/Кадр 341572f091af2883c8168316fde77a62.png' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
+                                    <img src="{% static 'main/img/photo_2022-12-06_14-08-23.jpg' %}" class="testimonial-img img-fluid" style="padding-left: 10%;padding-right: 10%;margin-left: auto;margin-right: auto;margin-bottom: 10%;margin-top: 10%;" alt="">
                                 </div>
                                 <div class="col-md-12 col-lg-8" style="padding-left: 5%; padding-right: 5%; margin-top: auto;margin-bottom: auto;">
 
-                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">Юрист-Консалт</div>
+                                    <div class="phone_zg text-center" style="margin-bottom: 1%;">Ginger Jackie</div>
                                     <div class="phone_wb" style="margin-left: 6px; text-align: left">
-                                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                                        Я, Екатерина Блинова, занимаюсь дизайном и пошивом женской одежды в ретро стиле. Я творческая натура.
+                                        Много времени уходит на подбор тканей, работу в ателье, создание контента для сайта и соцсетей. Поэтому, решила найти компанию,
+                                        которая помогала бы в бизнес-процессах. Первый опыт с крупной аутсорсинговой компанией получился не совсем удачный.
+                                        У них все клиенты стояли на потоке, не было персонального подхода и оперативности в решении вопросов.
+                                        В 2019г, я начала сотрудничать с Бизнес Ассистентом, моя работа значительно облегчилась.<br>
+                                        Сайт: <a href="https://gingerjackie.ru/">https://gingerjackie.ru/</a>
                                     </div>
                                 </div>
                             </div>
