Добавлены стрелки поворота на фотогафиях

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -483,10 +483,12 @@
                 <div class="content_flip">
                     <a class="card" id="num_1">
                         <div class="front">
-                            <img src="{% static 'main/img/_DSC2991.jpg' %}" alt="">
+                                <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
+                                <img src="{% static 'main/img/_DSC2991.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Екатерина</h2>
                                 <br>
                                 <p>Открытый, добрый, честный человек,<br> стремящийся узнавать что-то новое.<br>
@@ -497,10 +499,12 @@
                     </a>
                     <a class="card" id="num_2">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/_DSC3204.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Надежда</h2>
                                 <br>
                                 <p>Главный бухгалтер, аналитик<br> эксперт в вопросах<br> налогообложения, бухгалтерского<br> учета.
@@ -511,10 +515,12 @@
                     </a>
                     <a class="card" id="num_3">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/_DSC2907.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Мария</h2>
                                 <br>
                                 <p>Яркая и целеустремлённая.<br>Любит порядок.<br>Ответственно относится к своим<br>
@@ -525,10 +531,12 @@
                     </a>
                     <a class="card" id="num_4">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/_DSC3575.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Юлия</h2>
                                 <br>
                                 <p>Энергичная, позитивно мыслящая.<br>Умеет найти общий язык с любым клиентом.<br>
@@ -539,10 +547,12 @@
                     </a>
                     <a class="card" id="num_5">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/_DSC3426.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Катерина</h2>
                                 <br>
                                 <p>Наш юрист, которая подскажет,<br>как вести бизнес в рамках<br> правового поля,<br>
@@ -553,10 +563,12 @@
                     </a>
                     <a class="card" id="num_6">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/_DSC3156.jpg' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Татьяна</h2>
                                 <br>
                                 <p>Бухгалтер с профильным<br> образованием,<br> стаж работы более 8 лет.<br>
@@ -568,10 +580,12 @@
                     </a>
                     <a class="card" id="num_7">
                         <div class="front">
+                            <img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 170px;left: 275px;">
                             <img src="{% static 'main/img/DSC07232.png' %}" alt="">
                         </div>
                         <div class="back">
                             <div>
+                                <div class="text-right"><img src="{% static 'main/img/free-icon-left-turn-arrow-1453.png' %}" alt="" style="position: relative;bottom: 30px; transform: scale(-1, 1)"></div>
                                 <h2>Елена</h2>
                                 <br>
                                 <p>Руководитель с активной<br> жизненной позицией.<br> Имеет опыт работы в<br>
@@ -603,7 +617,7 @@
                                         Я, Константин Асаенок, руководитель и главный врач авторской стоматологии "ДенталСтори". С первых дней работы моей клиники я начал сотрудничество с фирмой Бизнес Ассистент.
                                         Мне важно было освободить себя от бизнес процессов и заниматься любимым делом. Именно это я и получил от коллектива BSA. На протяжении 5 лет все финансовые и налоговые вопросы находятся в их надежных руках,
                                         ещё очень помогают в сборе документов для различных целей. В любое время я могу обратиться с задачей и получить компетентное решение.<br>
-                                        Сайт: <a href="https://dstoryclinic.ru/">https://dstoryclinic.ru/</a>
+                                        Сайт: <a href="https://dstoryclinic.ru/" target="_blank">https://dstoryclinic.ru/</a>
                                     </div>
                                 </div>
                             </div>
@@ -622,7 +636,7 @@
                                         которая помогала бы в бизнес-процессах. Первый опыт с крупной аутсорсинговой компанией получился не совсем удачный.
                                         У них все клиенты стояли на потоке, не было персонального подхода и оперативности в решении вопросов.
                                         В 2019г, я начала сотрудничать с Бизнес Ассистентом, моя работа значительно облегчилась.<br>
-                                        Сайт: <a href="https://gingerjackie.ru/">https://gingerjackie.ru/</a>
+                                        Сайт: <a href="https://gingerjackie.ru/" target="_blank">https://gingerjackie.ru/</a>
                                     </div>
                                 </div>
                             </div>
