--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -29,6 +29,11 @@
 
     <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
 
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% static 'main/img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'main/img/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'main/img/favicon-16x16.png' %}">
+    <link rel="manifest" type="image/png" href="{% static 'main/img/site.webmanifest' %}">
+
 
     <meta name="format-detection" content="telephone=no">
 
