Добавлены ключевые слова

--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -36,6 +36,11 @@
 
 
     <meta name="format-detection" content="telephone=no">
+    <meta name="keywords" content="Бизнес, ассистент, налог, бухгалтерия, ФГИС, ЭДО, регестрация, ликвидация">
+    <meta name="description" content="Мы современная компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет,
+    мы постоянно развиваемся и не стоим на месте. У нас очень уютный офис, в котором вас всегда встретят с улыбкой и угостят вкусным кофе.
+    Обслуживаясь в нашей компании, вы получаете не просто услугу, а целую команду специалистов, которые сделают все для того,
+    чтобы Вы получили максимальную пользу и комфорт.">
 
 
     <script>
