--- a/Businessas/main/templates/main/index.html
+++ b/Businessas/main/templates/main/index.html
@@ -35,7 +35,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'main/img/favicon-16x16.png' %}">
     <link rel="manifest" type="image/png" href="{% static 'main/img/site.webmanifest' %}">
 
-
+    <meta name="yandex-verification" content="9b513ab79c2a9fca" />
     <meta name="format-detection" content="telephone=no">
     <meta name="keywords" content="Бизнес, ассистент, налог, бухгалтерия, ФГИС, ЭДО, регестрация, ликвидация">
     <meta name="description" content="Мы современная компания с быстрыми и уникальными решениями для вашего бизнеса. На данном рынке более 20 лет,
